# warp-gui

./: CLAUDE.md  CMakeLists.txt  README.md
src/: main.cpp  popup_widget.cpp  popup_widget.h  preferences_dialog.cpp  preferences_dialog.h  settings_menu.cpp  settings_menu.h  toggle_switch.cpp  toggle_switch.h  tray_app.cpp  tray_app.h  warp_cli.cpp  warp_cli.h  wayland_popup_helper.cpp  wayland_popup_helper.h
